# conan-giflib

./: .travis.yml  CMakeLists.txt  FindGIF.cmake  README.md  appveyor.yml  build.py  conanfile.py
test/: CMakeLists.txt  conanfile.py  gifcolor.c  qprintf.c
