PROJECT(MyHello)
cmake_minimum_required(VERSION 2.8)

include(conanbuildinfo.cmake)
CONAN_BASIC_SETUP()
find_package("GIF")

IF(GIF_FOUND)
	ADD_EXECUTABLE(gifcolor gifcolor.c qprintf.c)
	include_directories(${GIF_INCLUDE_DIR})
	TARGET_LINK_LIBRARIES(gifcolor ${GIF_LIBRARIES})
ELSE()
	MESSAGE(FATAL_ERROR "GIF NOT FOUND!")
ENDIF()
TARGET_LINK_LIBRARIES(gifcolor ${CONAN_LIBS})