PROJECT(MyHello)
cmake_minimum_required(VERSION 2.8)

include(conanbuildinfo.cmake)
CONAN_BASIC_SETUP()
find_package("GIF")

IF(GIF_FOUND)
    SET(GIF_SRCS gifcolor.c qprintf.c)
    if(CMAKE_CXX_COMPILER_ID MATCHES MSVC)
        IF(NOT CONAN_COMPILER_VERSION STREQUAL "14")
            SET(GIF_SRCS ${GIF_SRCS} snprintf.c)
        ENDIF()
    endif()
    ADD_EXECUTABLE(gifcolor ${GIF_SRCS})
	include_directories(${GIF_INCLUDE_DIR})
	TARGET_LINK_LIBRARIES(gifcolor ${GIF_LIBRARIES})
ELSE()
	MESSAGE(FATAL_ERROR "GIF NOT FOUND!")
ENDIF()
TARGET_LINK_LIBRARIES(gifcolor ${CONAN_LIBS})